@@ -6,30 +6,31 @@ import org.example.kaibutsu.core.tsuchigumo.Tsuchigumo;
 import org.example.kaibutsu.core.tsuchigumo.TsuchigumoResponse;
 import org.example.kaibutsu.magatama.Author;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class QuoteTsuchigumo implements Tsuchigumo {
+
     public Request startRequest() {
         return new Request("https://quotes.toscrape.com", "parseMain");
     }
 
-    public TsuchigumoResponse parseMain(Response response, TsuchigumoResponse.TsuchigumoResponseBuilder builder) {
-        List<Request> authorRequests = response.select(".author + a").stream().map(link -> new Request(link.absUrl("href"), "parseAuthor")).collect(Collectors.toList());
-        List<Request> paginationRequests = response.select("li.next a").stream().map(link -> new Request(link.absUrl("href"), "parseMain")).toList();
-        authorRequests.addAll(paginationRequests);
+    public TsuchigumoResponse parseMain(Response response) {
+        List<Request> newRequests = response.getJsoupElements(".author + a").stream().map(link -> new Request(link.absUrl("href"), "parseAuthor")).collect(Collectors.toList());
+        newRequests.addAll(response.getJsoupElements("li.next a").stream().map(link -> new Request(link.absUrl("href"), "parseMain")).toList());
 
-        return builder.requests(authorRequests).build();
+        return TsuchigumoResponse.fromNewRequests(newRequests);
     }
 
-    public TsuchigumoResponse parseAuthor(Response response, TsuchigumoResponse.TsuchigumoResponseBuilder builder) {
-        String name = response.select("h3.author-title").text();
-        String birthday = response.select(".author-born-date").text();
-        String bio = response.select(".author-description").text();
+    public TsuchigumoResponse parseAuthor(Response response) {
+        String name = response.getJsoupElements("h3.author-title").text();
+        String birthday = response.getJsoupElements(".author-born-date").text();
+        String bio = response.getJsoupElements(".author-description").text();
         Author author = new Author();
         author.name = name;
         author.birthday = birthday;
         author.bio = bio;
-        return builder.addMagatama(author).build();
+        return TsuchigumoResponse.fromMagatamas(Collections.singletonList(author));
     }
 }
